fix a table overflow bug

--- a/src/components/NewOrder.css
+++ b/src/components/NewOrder.css
@@ -14,7 +14,6 @@
   margin-bottom: 10px;
   margin-top: 10px;
   opacity: 0.7;
-  overflow: auto;
   color: black;
 }
 
